# PRIV-FHE-VC

./: LICENSE  README.md
code/images/: README.md  fhe_cnn_GREY_128x128_QAT.py  fhe_cnn_RGB_64x64.py  multi_dataset_fhe_cnn_GREY_128x128_PTQ.py  multi_dataset_fhe_cnn_GREY_128x128_QAT.py  multi_dataset_fhe_cnn_GREY_64x64_PTQ.py  multi_dataset_fhe_cnn_GREY_64x64_def.py  multi_dataset_fhe_cnn_RGB_128x128_QAT.py  multi_dataset_fhe_cnn_RGB_64x64_PTQ.py  pyproject.toml
code/images/models/trained_models_ptq_rgb/: model_ptq_bloodmnist.pth  model_ptq_dermamnist.pth  model_ptq_pathmnist.pth  model_ptq_retinamnist.pth
code/images/models/trained_models_qat/: model_breastmnist_bw5.pth  model_breastmnist_bw6.pth  model_breastmnist_bw7.pth  model_breastmnist_bw8.pth  model_octmnist_bw5.pth  model_octmnist_bw6.pth  model_octmnist_bw7.pth  model_octmnist_bw8.pth  model_organamnist_bw5.pth  model_organamnist_bw6.pth  model_organamnist_bw7.pth  model_organamnist_bw8.pth  model_organcmnist_bw5.pth  model_organcmnist_bw6.pth  model_organcmnist_bw7.pth  model_organcmnist_bw8.pth  model_organsmnist_bw5.pth  model_organsmnist_bw6.pth  model_organsmnist_bw7.pth  model_organsmnist_bw8.pth  model_pneumoniamnist_bw5.pth  model_pneumoniamnist_bw6.pth  model_pneumoniamnist_bw7.pth  model_pneumoniamnist_bw8.pth  model_tissuemnist_bw5.pth  model_tissuemnist_bw6.pth  model_tissuemnist_bw7.pth  model_tissuemnist_bw8.pth
code/images/models/trained_models_qat_rgb/: model_rgb_bloodmnist_bw5.pth  model_rgb_bloodmnist_bw6.pth  model_rgb_bloodmnist_bw7.pth  model_rgb_bloodmnist_bw8.pth  (+12 more)
(+285 files in other folders)
